--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     Hello World!
+    <details>
+      <summary>Info</summary>
+      Dette er mitt favorritt element i html
+    </details>
   </body>
 </html>
