--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     Hello World!
+    <h1>Dette er en overskrift</h1>
+    <h2>Jeg hadde det gøy med å lage min egen første nettside</h2>
+    <h3>Under finner du en kul funksjon</h3>
     <details>
       <summary>Info</summary>
-      Dette er mitt favorritt element i html
+      Lukk meg igjen fort!
     </details>
+    <h4>Gjorde dette for deg ^^</h4>
   </body>
 </html>
