wct ca oppdattert

--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My first website</title>
   </head>
   <body>
-    Hello World!
-    <h1>Dette er en overskrift</h1>
-    <h2>Jeg hadde det gøy med å lage min egen første nettside</h2>
-    <h3>Under finner du en kul funksjon</h3>
-    <details>
-      <summary>Info</summary>
-      Lukk meg igjen fort!
+    
+    <h1>Hello World!</h1>
+    <p>Welcome to my first website.</p>
+    <h2>Web security</h2>
+    <p id="web-security-question">How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
     </details>
-    <h4>Gjorde dette for deg ^^</h4>
+    <p id="web-security-answer">[Check links before clicking them and email addresses. Don't give any sensetive information to anyone you don't trust. Keep your system and software up to date. Install a firewall if you don't have one already. Regular backups of your data. Have different passwords across your accounts/systems.]</p>
+    
   </body>
 </html>
